--- a/recipes/templates/base_generic.html
+++ b/recipes/templates/base_generic.html
@@ -45,7 +45,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Recipe Sharing Site. All rights reserved.</p>
+            <p>&copy; 2024 Recipe Sharing Site. All rights reserved.LMAOOOOOOOO</p>
         </div>
     </footer>
 </body>
