--- a/recipes/templates/base_generic.html
+++ b/recipes/templates/base_generic.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Recipe Sharing Site{% endblock %}</title>
-
+    <script src="{% static 'js/favorites.js' %}"></script>
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
@@ -31,11 +31,15 @@
                     <li><a href="{% url 'login_and_registration' %}">Login/Register</a></li>
                 {% endif %}
                 </ul>
+             <ul>
+
             </div>
+
         </nav>
     </header>
 
     <main>
+
         <div class="container">
             {% block content %}
             <!-- Questo blocco verrà sovrascritto nei template figlio -->
@@ -50,3 +54,4 @@
     </footer>
 </body>
 </html>
+
