--- a/recipes/templates/recipes/favorite_recipes.html
+++ b/recipes/templates/recipes/favorite_recipes.html
@@ -10,7 +10,7 @@
         {% for recipe in liked_recipes %}
             <div class="profile-recipe-box">
                 <img src="https://placehold.co/600x400" alt="{{ recipe.title }}">
-                <h3><a href="{% url 'recipe_detail' recipe.id %}">{{ recipe.title }}</a></h3>
+                <h3><a href="{% url 'recipe_detail' pk=recipe.pk %}">{{ recipe.title }}</a></h3>
                 <p>{{ recipe.description }}</p>
                 <div class="recipe-meta">
                     <span>Author: {{ recipe.author.username }}</span>
